final 1 s nakupnim seznamem

--- a/jidelnicek/templates/jidelnicek3.html
+++ b/jidelnicek/templates/jidelnicek3.html
@@ -173,8 +173,20 @@
 	<div class="pozadinakupseznamu">
 		<h3 class="paragraf1a2 podtrzeni">Nákupní seznam</h3>		
 		<div class="checkbox nakupniseznam">
-				{% for ing in formingred1 %} 
-				<li> {{ing}}</li> <br>
+				{% for ing in formingred11 %} 
+				<li> {{ing}}</li>
+				{% endfor %} 
+				{% for ing in formingred21 %} 
+				<li> {{ing}}</li>
+				{% endfor %} 
+				{% for ing in formingred31 %} 
+				<li> {{ing}}</li>
+				{% endfor %} 
+				{% for ing in formingred41 %} 
+				<li> {{ing}}</li>
+				{% endfor %} 
+				{% for ing in formingred51 %} 
+				<li> {{ing}}</li>
 				{% endfor %} 
 			
 		</div>
